test/corpus/atoms.txt
================================================================================
int — positive
================================================================================

42

--------------------------------------------------------------------------------

(source
  (int))

================================================================================
int — negative
================================================================================

-42

--------------------------------------------------------------------------------

(source
  (int))

================================================================================
float — basic
================================================================================

3.14

--------------------------------------------------------------------------------

(source
  (float))

================================================================================
float — trailing dot is 1.0
================================================================================

1.

--------------------------------------------------------------------------------

(source
  (float))

================================================================================
float — negative
================================================================================

-0.5

--------------------------------------------------------------------------------

(source
  (float))

================================================================================
string — empty
================================================================================

""

--------------------------------------------------------------------------------

(source
  (string))

================================================================================
string — with escapes
================================================================================

"a\n\"b\\c"

--------------------------------------------------------------------------------

(source
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

================================================================================
ident — simple
================================================================================

foo

--------------------------------------------------------------------------------

(source
  (ident))

================================================================================
ident — punctuation chars
================================================================================

<= >= != +foo foo-bar foo.bar foo? bang!

--------------------------------------------------------------------------------

(source
  (ident)
  (ident)
  (ident)
  (ident)
  (ident)
  (ident)
  (ident)
  (ident))

================================================================================
ident — bare minus
================================================================================

-

--------------------------------------------------------------------------------

(source
  (ident))

================================================================================
ident — minus before non-digit
================================================================================

-foo

--------------------------------------------------------------------------------

(source
  (ident))
