test/corpus/collections.txt
================================================================================
empty array
================================================================================

[]

--------------------------------------------------------------------------------

(source
  (array))

================================================================================
array of ints
================================================================================

[1 2 3]

--------------------------------------------------------------------------------

(source
  (array
    (int)
    (int)
    (int)))

================================================================================
nested array
================================================================================

[[1 2] [3 4]]

--------------------------------------------------------------------------------

(source
  (array
    (array
      (int)
      (int))
    (array
      (int)
      (int))))

================================================================================
empty map
================================================================================

{}

--------------------------------------------------------------------------------

(source
  (map))

================================================================================
map of ints
================================================================================

{1:1  2: 5}

--------------------------------------------------------------------------------

(source
  (map
    (map_entry
      key: (int)
      value: (int))
    (map_entry
      key: (int)
      value: (int))))

================================================================================
map with string key and quoted value
================================================================================

{"1": 'foo}

--------------------------------------------------------------------------------

(source
  (map
    (map_entry
      key: (string)
      value: (quote
        datum: (ident)))))
