test/corpus/comments.txt
================================================================================
top-level comment then form
================================================================================

;; hello
42

--------------------------------------------------------------------------------

(source
  (comment)
  (int))

================================================================================
trailing inline comment
================================================================================

(1 2) ;; trailing comment

--------------------------------------------------------------------------------

(source
  (list
    (int)
    (int))
  (comment))

================================================================================
comment between list elements
================================================================================

(1 ;; middle
 2)

--------------------------------------------------------------------------------

(source
  (list
    (int)
    (comment)
    (int)))

================================================================================
semicolon terminates identifier
================================================================================

foo;;bar

--------------------------------------------------------------------------------

(source
  (ident)
  (comment))
