test/corpus/lists.txt
================================================================================
empty list
================================================================================

()

--------------------------------------------------------------------------------

(source
  (list))

================================================================================
list of atoms
================================================================================

(foo 42 3.5 "bar")

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (int)
    (float)
    (string)))

================================================================================
nested list
================================================================================

(a (b c))

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (list
      (ident)
      (ident))))

================================================================================
dotted pair
================================================================================

(a . b)

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (dot)
    (ident)))

================================================================================
dotted list with prefix
================================================================================

(a b c . d)

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)
    (ident)
    (dot)
    (ident)))

================================================================================
dot inside ident is not the marker
================================================================================

(foo.bar baz)

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)))

================================================================================
float in list is not a dotted marker
================================================================================

(1.5 2)

--------------------------------------------------------------------------------

(source
  (list
    (float)
    (int)))

================================================================================
defn-like form
================================================================================

(fn square (x) (* x x))

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)
    (list
      (ident))
    (list
      (ident)
      (ident)
      (ident))))
