test/corpus/programs.txt
================================================================================
multiple top-level forms
================================================================================

(let x 10)
(+ x 5)

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)
    (int))
  (list
    (ident)
    (ident)
    (int)))

================================================================================
recursive factorial
================================================================================

(fn fact (n)
  (if (< n 1) 1
    (* n (fact (- n 1)))))
(fact 5)

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)
    (list
      (ident))
    (list
      (ident)
      (list
        (ident)
        (ident)
        (int))
      (int)
      (list
        (ident)
        (ident)
        (list
          (ident)
          (list
            (ident)
            (ident)
            (int))))))
  (list
    (ident)
    (int)))

================================================================================
variadic via dotted rest
================================================================================

(fn log (level . args)
    (str-join (fmap to-str (cons level args)) " "))

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)
    (list
      (ident)
      (dot)
      (ident))
    (list
      (ident)
      (list
        (ident)
        (ident)
        (list
          (ident)
          (ident)
          (ident)))
        (string))))

================================================================================
counter via captured ref
================================================================================

(let c (ref 0))
(fn bump () (set! c (+ (deref c) 1)))
(bump) (bump) (bump)
(deref c)

--------------------------------------------------------------------------------

(source
  (list
    (ident)
    (ident)
    (list
      (ident)
      (int)))
  (list
    (ident)
    (ident)
    (list)
    (list
      (ident)
      (ident)
      (list
        (ident)
        (list
          (ident)
          (ident))
        (int))))
  (list
    (ident))
  (list
    (ident))
  (list
    (ident))
  (list
    (ident)
    (ident)))
