test/corpus/reader_macros.txt
================================================================================
quote
================================================================================

'foo

--------------------------------------------------------------------------------

(source
  (quote
    datum: (ident)))

================================================================================
quote of list
================================================================================

'(1 2 3)

--------------------------------------------------------------------------------

(source
  (quote
    datum: (list
      (int)
      (int)
      (int))))

================================================================================
quasiquote
================================================================================

`(1 ,x ,@xs)

--------------------------------------------------------------------------------

(source
  (quasiquote
    datum: (list
      (int)
      (unquote
        datum: (ident))
      (unquote_splice
        datum: (ident)))))

================================================================================
nested quasiquote and quote
================================================================================

`',x

--------------------------------------------------------------------------------

(source
  (quasiquote
    datum: (quote
      datum: (unquote
        datum: (ident)))))
